scheduler phase 1 completed
